[package]
name = "experimon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "experimon"
path = "./src/lib.rs"

[[bin]]
name = "experimon"
path = "./src/cmd/experimon/main.rs"

[dependencies]
libbpf-cargo = "0.22.1"

[build-dependencies]
libbpf-cargo = "0.22.1"
